# neat_rs

./: .gitignore  Cargo.toml  devenv.nix  readme.md
.github/workflows/: build.yml
benches/: activate.rs
examples/: Cargo.toml  iris.csv  iris_matrix.rs  iris_matrix_2.rs  xor.rs  xor_matrix.rs
examples/src/: iris_matrix.rs  xor.rs  xor_3_matrix.rs  xor_matrix.rs
neat/: Cargo.toml  README.md
neat/src/: activation.rs  config.rs  connection.rs  genome.rs  lib.rs  link.rs  network.rs  neuron.rs  neuron_type.rs  node.rs  organism.rs
neat/tests/: genome.rs
nn/: Cargo.toml
nn/src/: agent.rs  config.rs  layer.rs  lib.rs  neural_network.rs  neuron.rs
shared/: Cargo.toml
shared/src/: fitness.rs  lib.rs  organism.rs  population.rs
src/: activation.rs  argmax.rs  config.rs  connection.rs  genome.rs  lib.rs  link.rs  network.rs  neuron.rs  neuron_type.rs  node.rs  organism.rs  softmax.rs  utils.rs
tests/: genome.rs
utils/: Cargo.toml
utils/src/: activation.rs  argmax.rs  levenshtein.rs  lib.rs  make_id.rs  random.rs  softmax.rs
