[workspace]
resolver = "2"

members = [
    "nn",
    "neat",
    "utils",
    "shared",
    "examples",
]

[workspace.dependencies]
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
bytes = "1.5"
tracing = "0.1"
ndarray = "0.15"
anyhow = "1.0.86"
thiserror = "1.0"
serde_json = "1.0"
hex-literal = "0.4"
tracing-subscriber = "0.3"
vivalaakam_neuro_nn = { path = "./nn" }
vivalaakam_neuro_neat = { path = "./neat" }
vivalaakam_neuro_utils = { version = "0.1.19", path = "./utils" }
vivalaakam_neuro_shared = { version = "0.1.19", path = "./shared" }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
