[workspace]
resolver = "2"

members = ["nn", "neat", "utils", "shared", "examples"]

[workspace.dependencies]
hex = "0.4"
rand = "0.9.1"
sha2 = "0.10"
bytes = "1.5"
tracing = "0.1"
ndarray = "0.16"
anyhow = "1.0"
thiserror = "2.0.10"
serde_json = "1.0"
hex-literal = "1.0"
tracing-subscriber = "0.3"
vivalaakam_neuro_nn = { path = "./nn" }
vivalaakam_neuro_neat = { path = "./neat" }
vivalaakam_neuro_utils = { version = "0.1.20", path = "./utils" }
vivalaakam_neuro_shared = { version = "0.1.20", path = "./shared" }
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
