[package]
name = "vivalaakam_neuro_nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
hex-literal = { workspace = true }
tracing-subscriber = { workspace = true }
vivalaakam_neuro_utils = { workspace = true }
