[package]
name = "vivalaakam_neuro_nn"
version = "0.1.20"
edition = "2021"
authors = ["Andrey Makarov <viva.la.akam@gmail.com>"]
description = "Library for work with neural network"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
hex-literal = { workspace = true }
tracing-subscriber = { workspace = true }
vivalaakam_neuro_utils = { workspace = true }
