[package]
name = "vivalaakam_neuro_shared"
version = "0.1.19"
edition = "2021"
authors = ["Andrey Makarov <viva.la.akam@gmail.com>"]
description = "Library for shared traits and other stuff"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
ndarray = { workspace = true }
vivalaakam_neuro_utils = { workspace = true }
