[package]
name = "vivalaakam_neuro_shared"
version = "0.1.20"
edition = "2021"
authors = ["Andrey Makarov <viva.la.akam@gmail.com>"]
description = "Library for shared traits and other stuff"
license = "MIT"
repository = "https://github.com/vivalaakam/neat_rs"

[dependencies]
anyhow = { workspace = true }
ndarray = { workspace = true }
vivalaakam_neuro_utils = { workspace = true }
