[package]
name = "vivalaakam_neuro_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
ndarray = { workspace = true }
thiserror = { workspace = true }
